--- a/public/css/utility.css
+++ b/public/css/utility.css
@@ -1,3 +1,20 @@
+/* global body */
+body{
+    width:100%;
+    overflow-x: hidden;
+}
+/* bootstrap modifications */
+.container-fluid{
+    padding:0;
+    margin:0;
+}
+.carousel-indicators {
+    bottom:-50px;
+  }
+.carousel-inner{
+    margin-bottom: -50px;
+}
+
 /* Padding */
 .extra-padding-25{
     padding:25px;
@@ -9,7 +26,16 @@
     padding:75px;
 }
 
-/* custom-box */
-.custom-box{
-    border:1px solid black;
+/* positioning */
+.position-middle{
+    margin-top: 40vh;
+}
+
+.position-middle-30{
+    margin-top: 30vh;
+}
+
+/* text-shadow */
+.text-shadow-sm{
+    text-shadow: 2px 2px 8px #FF0000;
 }
